# robomagellan

./: .gitignore  .gitmodules  .ycm_extra_conf.py  Makefile
src/controller/: CMakeLists.txt  package.xml
src/controller/launch/: manual.launch  race.launch  robomagellan.launch  simulation.launch
src/controller/msg/: Parameters.msg
src/controller/scripts/: fixed_cmd_src.py  heartbeat_generator.py  kalman_estimator.py  manual_control.py  path_provider.py
src/controller/src/: controller.cc  motion_planner.cc
src/libuvc_camera/: CMakeLists.txt
src/libuvc_camera/src/: camera_driver.cpp
src/trex_dmc01/: CMakeLists.txt  package.xml
src/trex_dmc01/msg/: Status.msg
src/trex_dmc01/src/: trex_dmc01.cc
src/unity_glue/: CMakeLists.txt  package.xml
src/unity_glue/scripts/: unity_glue.py
src/zed_processor/: CMakeLists.txt  package.xml
src/zed_processor/scripts/: proc.py
src/zed_processor/src/: bag_video_reader.cc  bag_video_reader.hpp  calibrate.cc  calibration_data.cc  calibration_data.hpp  camera.cc  camera.hpp  capture.cc  clique.cc  clique.hpp  clique_test.cc  cone_tracker.cc  cone_tracker.hpp  cross_frame_processor.cc  cross_frame_processor.hpp  cuda_device_vector.hpp  cuda_pinned_allocator.hpp  debug_renderer.cc  debug_renderer.hpp  descriptor_tools.cu  descriptor_tools.hpp  descriptor_tools_test.cc  direction_target.cc  direction_target.hpp  direction_tracker.cc  direction_tracker.hpp  distance.cc  fast_gpu.cc  fast_gpu.cu  fast_gpu.hpp  fast_gpu_test.cc  fast_test.cc  frame_buffer_queue.cc  frame_buffer_queue.hpp  frame_processor.cc  frame_processor.hpp  freak.cc  freak.hpp  freak_base.cc  freak_base.hpp  (+30 more)
src/zed_processor/test_data/: golden_path.txt
utils/: BUILD  Makefile  WORKSPACE  average.hpp  calib.py  calibrate.cc  calibration_data.cc  calibration_data.hpp  camera.cc  camera.hpp  capture.cc  clique.cc  clique.hpp  cross_frame_processor.cc  cross_frame_processor.hpp  cuda.BUILD  distance.cc  export_calibration.py  fps_meter.hpp  frame_buffer_queue.cc  frame_processor.cc  frame_processor.hpp  frame_processor.inl  gen_checkerboard.py  local.BUILD  math3d.cc  math3d.hpp  math3d_test.cc  meson.build  opencv3.BUILD  process.cc  raw_video_reader.cc  raw_video_reader.h  reprojection_estimator.cc  reprojection_estimator.hpp  reprojection_estimator_test.cc  rigid_estimator.cc  rigid_estimator.hpp  rigid_estimator.py  rigid_estimator_test.cc  (+6 more)
utils/data/: calib.yml  calib_phone.yml  calib_zed.yml  calibration_constants.py
utils/snapshots/calibration/left/: snapshot_1.bmp.REMOVED.git-id  snapshot_2.bmp.REMOVED.git-id  snapshot_3.bmp.REMOVED.git-id  snapshot_4.bmp.REMOVED.git-id  snapshot_5.bmp.REMOVED.git-id  snapshot_6.bmp.REMOVED.git-id  snapshot_7.bmp.REMOVED.git-id  snapshot_8.bmp.REMOVED.git-id
utils/snapshots/calibration/right/: snapshot_1.bmp.REMOVED.git-id  snapshot_2.bmp.REMOVED.git-id  snapshot_3.bmp.REMOVED.git-id  snapshot_4.bmp.REMOVED.git-id  snapshot_5.bmp.REMOVED.git-id  snapshot_6.bmp.REMOVED.git-id  snapshot_7.bmp.REMOVED.git-id  snapshot_8.bmp.REMOVED.git-id
utils/snapshots/calibration/stereo/: snapshot_1.bmp.REMOVED.git-id  snapshot_10.bmp.REMOVED.git-id  snapshot_2.bmp.REMOVED.git-id  snapshot_3.bmp.REMOVED.git-id  snapshot_4.bmp.REMOVED.git-id  snapshot_5.bmp.REMOVED.git-id  snapshot_6.bmp.REMOVED.git-id  snapshot_7.bmp.REMOVED.git-id  snapshot_8.bmp.REMOVED.git-id  snapshot_9.bmp.REMOVED.git-id
